# libuOS

./: CMakeLists.txt  Makefile  README.md  main.cpp  memalloc.c  memmgr.c  memmgr.h
memmgr/: memmgr.c  memmgr.h
tsk_scheduler/: tsk_scheduler.c  tsk_scheduler.h
